k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: br-public
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
    - name: http
      protocol: HTTP
      port: 80
